# fact-species-viz

./: .babelrc  .dockerignore  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  AUTHORS.rst  CONTRIBUTING.rst  Dockerfile  Dockerfile.backend  Makefile  README.rst  dev-environment.yml  docker-compose.yml  environment.yml  modd.conf  package.json  pyproject.toml  requirements-pip-manual.txt  requirements-pip.txt  requirements.txt  setup.cfg  tailwind.config.js
.github/: ISSUE_TEMPLATE.md
data/: allowed_area.geojson  secoora-land.geojson  secoora-water.geojson
scripts/: __init__.py  cache.py  config.py  fetch.py  hull.py  log.py  logging.conf  make.py  process.py  serve.py  tasks.py  utils.py
src/: baseStyles.js  chooser.js  citationModal.js  dataLayer.js  distMap.js  glmap.js  icon.js  index.js  layerEditor.js  layerTile.js  legend.js  mapgrid.js  mapstyle.json  paletteSwatch.js  palettes.js  recMap.js  slub.js  speciesImage.js  speciesVizApp.js  style.scss
src/assets/: rec.geojson
src/assets/css/: styles.css
static/: content.html  footer.html  index.html
tests/: __init__.py  test_fact_species_viz.py
