[build-system]
requires = ["setuptools>=42", "wheel", "setuptools_scm[toml]>=3.4"]
build-backend = "setuptools.build_meta"

[project]
name = "fact-species-viz"
version = "1.0.0"
description = "Data visualization tool for the Florida Atlantic Coast Telemetry"
authors = [
    {name = "Developer", email="dev@axiomdatascience.com"},
]
readme = {file = "README.rst", content-type="text/x-rst"}
license = {file = "LICENSE"}
keywords = ["fact-species-viz", "FACT", "DaViT"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.9.18"
]

[project.urls]


[tool.interrogate]
ignore-init-method = true
ignore-init-module = false
ignore-magic = false
ignore-semiprivate = true
ignore-private = true
ignore-property-decorators = true
ignore-module = false
fail-under = 95
exclude = ["docs", "tests"]
verbose = 1
quiet = false
color = true

[tool.black]
exclude = "tests/fixtures/*"
line-length = 105

[tool.isort]
profile = "black"
skip_glob = ["docs/*", "docs/**/*.py"]
line_length = 105
known_third_party = ["celery", "click", "environs", "fastapi", "geojson", "geopandas", "jinjasql", "numpy", "orjson", "pandas", "process", "pydantic", "pydantic_settings", "pyproj", "pytest", "pyvisgraph", "redis", "requests", "scipy", "shapely", "shapely_geojson", "skimage", "sqlalchemy", "tqdm"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-v"
# only test the root level, otherwise it picks up the tests of the project template
testpaths = [
    "tests",
]

[tool.coverage.run]
omit = [
    "fact_species_viz/_version.py",
    "fact_species_viz/version.py",
    "tests/*",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-dir]
fact_species_viz = "fact_species_viz"
